# pdfanon

./: .gitignore  CLAUDE.md  README.md  anonymizer.py  create_sample_pdf.py  pyproject.toml  requirements.txt  setup.sh
src/pdfanon/: __init__.py  __main__.py  cli.py
src/pdfanon/core/: __init__.py  anonymizer.py  detector.py  pdf_handler.py
src/pdfanon/faker/: __init__.py  generator.py  mapping.py
