[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfanon"
version = "1.0.0"
description = "Anonymize PII in PDF files with realistic fake data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["pdf", "anonymization", "pii", "privacy", "presidio", "faker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
]

dependencies = [
    "pymupdf>=1.23.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.6.0",
    "faker>=22.0.0",
    "typer[all]>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pdfanon = "pdfanon.cli:app"

[project.urls]
Homepage = "https://github.com/ajitdeshpande/pdfanon"
Repository = "https://github.com/ajitdeshpande/pdfanon"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfanon"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
